--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana;
+}
+
+header {
+  padding: 20px 20px 5px 20px;
+  color: #814004;
+  background-color: #ffc085;
+  box-sizing: border-box;
+}
+
+nav {
+  padding: 10px;
+}
+
+.level-1 {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.data-source {
+  font-size: 10px;
+  color: #9c603d;
+  font-style: italic;
+}
 /* Tooltip */
 #tooltip {
   position: absolute;
